--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 </label>
                 <button type="submit" class="footer-form__btn">
                     <!-- <div class="footer-btn-icon"> -->
-                        <span>Подписаться</span>
+                        <span class="footer-form__btn--text">Подписаться</span>
                         <svg class="footer-form__icon" width="24" height="24">
                             <use href="./images/icons.svg#iconsend"></use>
                         </svg>
